--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://sef.ar" # the base hostname & protocol for your site e.g. http://w
 
 # User settings
 username: Sebastián Fernández
-user_description: I'm a Embedded Systems Engineer from Argentina, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Giving Circles working with Grapevine, a California based startup trying to improve the world through collaborative giving. I'm the first engineer they hired to work on the platform.
+user_description: I'm a Embedded Systems Engineer from Argentina, always searching for the next challenge. More than 5 years experience in analysis, design, development, testing, and implementation of various embedded systems.
 user_title: Embedded Systems Engineer
 email: info@sef.ar
 # twitter_username: 
